style: fix grid item color contrast/add transition

--- a/css/styles.css
+++ b/css/styles.css
@@ -293,11 +293,16 @@ button:hover, button:focus, .button:focus, .button:hover {
   }
 
   .grid__item {
-    background-color: var(--light-gray-color);
     padding: 30px;
     border-radius: 5px;
     position: static;
     text-align: center;
+    border: 3px solid var(--secondary-color);
+  }
+
+  .grid__item:hover {
+    background-color: #424659;
+    transition: background-color .5s linear;
   }
 
   .grid__item h2 {
